# Notion-Helper

./: .gitignore  README.md  pyproject.toml
bot/: __init__.py  config.py  constants.py  main.py
bot/handlers/: register_handler.py
bot/models/: __init__.py  opportunity.py
bot/repositories/: notion_repository.py
bot/services/: ai_service.py
